--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,9 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 
+monitor_speed = 115200
+upload_speed = 512000
+
+lib_deps =
+  ArduinoJson
+  MQTT
