--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-.pio
-.vscode/.browse.c_cpp.db*
-.vscode/c_cpp_properties.json
-.vscode/launch.json
-.vscode/ipch
-include/secrets.h
+/device/.pio
+/device/.vscode/.browse.c_cpp.db*
+/device/.vscode/c_cpp_properties.json
+/device/.vscode/launch.json
+/device/.vscode/ipch
+/device/include/secrets.h
