--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -21,6 +21,7 @@
     "typescript": "~3.7.2"
   },
   "dependencies": {
+    "@aws-cdk/aws-iot": "^1.22.0",
     "@aws-cdk/core": "^1.22.0",
     "source-map-support": "^0.5.16"
   }
