Publish bme280 measurments

--- a/device/platformio.ini
+++ b/device/platformio.ini
@@ -17,5 +17,7 @@ monitor_speed = 115200
 upload_speed = 512000
 
 lib_deps =
+  Adafruit BME280 Library
+  Adafruit Unified Sensor
   ArduinoJson
   MQTT
